resources/events-admin.css
/* = Shared CSS Elements
=============================================*/
.invalid input{border: 2px solid red !important;}
.valid input{border: 1px solid green;}
.clearfix {zoom:1; /* For IE */}
.placeholder { cursor: text; padding: 4px 4px 4px 4px; color: #999999; }
input:placeholder, textarea:placeholder { color: #999999; }
input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #999999; }

/* = Post Type Listing
=============================================*/
.events-cal .tablenav select[name=m], .events-cal #post-query-submit {display:none;}
.fixed .column-start-date, .fixed .column-end-date, .fixed .column-events-cats {width:14%;}
#additional-field-table input, #additional-field-table select, #additional-field-table textarea { width: 200px; }
#additional-field-table tbody tr { height: 72px; }
.view-calendar-link {
	display:inline-block;
    font-weight: normal;
    padding: 0;
    height: 14.5px;
	}
.view-calendar-link-div {
	display: inline-block;
	position: absolute;
	left: 200px;
	margin-top: 18px;
}

/* = Post Type Editing
=============================================*/
.notice {background-color: rgb(255, 255, 224); border: 1px solid rgb(230, 219, 85); margin: 5px 0 15px;}
.bubble {border-color:#dfdfdf; border-width:1px; border-style:solid; -moz-border-radius:3px; -khtml-border-radius:3px; -webkit-border-radius:3px; border-radius:3px; padding: 10px; border-style:solid; border-spacing:0; background-color:#F9F9F9;}

.eventForm {margin-top: -20px;}
.eventForm td {padding:0 6px 10px 0; font-size:12px; vertical-align:middle;}
.eventForm #event-meta td { vertical-align: top; }
.eventForm #event-meta td div { margin-bottom: 10px; }
.eventForm #event-meta td div:last-child {margin-bottom: 20px;}
.eventForm select, .eventForm input {font-size:11px;}
.eventForm h4 {font-size:1.2em; margin:1em 0 1em;}
.eventForm h4.event-time {margin-top: 0;}
.tribe-community-event-info {margin: 10px; width:100%;}
.eventtable, #EventInfo{margin:0; padding-top:0; width:100%; }
#event_tickets,
.eventtable.ticket_list.eventForm {table-layout: fixed; }
#ticket_start_date,
#ticket_end_date{width:100px;}
.form-table form input {border:none;}
#submitLabel {display: block;}
#submitLabel input {display: block; padding: 0;}
#EventBriteDetailDiv h4, .tribe-community-event-info h4, .eventForm .tribe_sectionheader h4 {text-transform: uppercase; border-bottom: 1px solid #e5e5e5; padding-bottom: 6px;}
.eventForm .tribe_sectionheader {padding-bottom: 5px !important;}

td.tribe_message {padding-bottom: 10px !important;}

#tribe_thanks {float: left; width: 200px; margin: 5px 0 0 0;}
.tribe_brand {font-weight: normal; margin: 8px 0; font-family: Georgia !important; font-size: 17px !important;}
.eventForm p {margin: 0 0 10px 0!important;}

.tribe-events-error {display:none;}
.tribe-events-multi-event-day {color: #0F81BB;}

.ui-front {z-index: 1000000;}
.events-cal .ui-widget-overlay.ui-front {z-index: 90;
}



/* = Eventbrite
=============================================*/
.tribe-community-event-info small, #EventBriteDetailDiv small {color: #a3a3a3; font-size: 10px;}
#eventBriteTicketing, #mainDonateRow {background: url(images/bg_fade.png) repeat-x top left; background-color: #fff; padding: 10px 15px; border: 1px solid #e2e2e2; -moz-border-radius: 3px; -khtml-border-radius: 3px; -webkit-border-radius: 3px; -moz-border-radius-topleft: 0; -moz-border-radius-topright: 0; -webkit-border-top-left-radius: 0; -webkit-border-top-right-radius: 0; border-radius: 3px; margin: -11px 6px 0;}
#eventBriteTicketing h2 {background: url(images/eb_press_little.gif) no-repeat top right; height: 80px; margin: 0;}
.tribe-community-event-info, table.eventForm {width: 100%;}

/* = Recurrence
=============================================*/
#custom-recurrence-weeks label { width: 45px; display: block; float: left; margin-bottom: 3px;}
#custom-recurrence-frequency input { width: 30px; }
#custom-recurrence-years label { width: 50px; display: block; float: left; margin-bottom: 3px;}
#recurrence-changed-row { color: red; display: none; }
#rec-end-error { color: red; }
#rec-days-error { color: red; }
.rec-error { display:none; }
#recurrence-pattern-description { font-style: italic; }
.recurrence-pattern-description-row { display: none; }

/* = Upgrade Screen
=============================================*/
#tribe-upgrade {margin:20px 0 30px; border:1px solid #ccc; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; padding:0 20px 20px; background:#f6f6f6;}
#tribe-upgrade .message {border-style:solid; border-width:1px; padding:6px 12px; -moz-border-radius:3px; -webkit-border-radius:3px; border-radius:3px; background-color:#FFFFE0; border-color:#E6DB55;}

/* = Chosen
=============================================*/
.chosen, .tribe-chosen, .chzn-container {margin-right: 10px!important;}
.venue-dropdown, .organizer-dropdown, .events-dropdown, #eventsDefaultState, #defaultCountry, #StateProvinceSelect {width: 220px !important;}
.multi-day-cutoff-dropdown {width: 100px !important;}

/* fix for widgets + chosen support */
.widget-liquid-right .widget, .inactive-sidebar .widget, .widget-liquid-right .sidebar-description {overflow: visible !important;}


/* = Settings Screen
=============================================*/
.tribe-settings-form { max-width: 1000px; }
.tribe-settings-form fieldset {padding: 10px 0; display: inline-block; clear: both;}
.tribe-settings-form legend {width: 220px; margin-right: 20px; float: left; font-weight: bold;}
.tribe-settings-form fieldset.tribe-field-license_key legend { width: auto; }
.tribe-settings-form .tribe-field-wrap {float: left; max-width: 500px;}
.tribe-settings-form .tribe-field-radio label, .tribe-settings-form .tribe-field-checkbox_list label {display: block; margin: 5px 0;}
.tribe-settings-form .tribe-field-radio label input, .tribe-settings-form .tribe-field-checkbox_list label input {margin-right: 5px;}
/* ... */

